[package]
name = "hokay"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A bare-bones HTTP server that always returns with 204 No Content."
readme = "README.md"
repository = "https://github.com/olix0r/hokay"

[dependencies]
hyper = { version = "0.14", default-features = false, features = ["http1", "runtime", "server"] }
tokio = { version = "1", features = ["macros", "net", "rt", "signal", "sync"] }

[profile.release]
lto = true
