[package]
name = "hokay"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "A bare-bones HTTP server that always returns with 204 No Content."
readme = "README.md"
repository = "https://github.com/olix0r/hokay"

[profile.release]
lto = true

[dependencies.clap]
version = "4"
default-features = false
features = ["cargo", "derive", "std"]

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["std"]

[dependencies.hyper]
version = "0.14"
default-features = false
features = ["http1", "runtime", "server"]

[dependencies.tokio]
version = "1"
default-features = false
features = ["macros", "net", "rt", "signal", "sync"]
